# vspreview-rs

./: .gitignore  Cargo.toml  README.md  UI.md
.cargo/: config.toml
.github/actions/setup-release-env/: action.yml
.github/workflows/: artifacts.yml  ci.yml  release.yml
src/: main.rs  previewed_script.rs  previewer.rs  utils.rs  vs_handler.rs
src/app/: eframe_app.rs  epi_app.rs  mod.rs  preview_filter_type.rs  vs_previewer.rs
src/app/transforms/: icc.rs  mod.rs
src/app/ui/: bottom_panel.rs  controls.rs  error_window.rs  frame_props.rs  message_window.rs  mod.rs  preferences.rs  preview_image.rs  state_window.rs
src/app/ui/custom_widgets/: custom_image.rs  mod.rs
src/custom_widgets/: mod.rs  number_box.rs
src/preview/: mod.rs  preview_filter_type.rs  previewer.rs  previewer_app.rs
src/previewer/: mod.rs  preview.rs  preview_ui.rs  previewed_script.rs  previewer.rs
src/vs_handler/: mod.rs  vsframe.rs  vsnode.rs  vstransform.rs  zimg_map.rs
