[package]
name = "vspreview-rs"
version = "1.0.0"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.72.0"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.4.18", features = ["derive", "wrap_help", "deprecated"] }
eframe = { version = "0.27.2", features = ["persistence"] }
fast_image_resize = "5.1.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
rgb = "0.8.50"
itertools = "0.13.0"
lcms2 = "6.1.0"
num_enum = "0.7.3"
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "*", default-features = false, features = ["net"] }
parking_lot = "0.12.3"
poll-promise = "0.3.0"
rfd = "0.15.1"
serde_derive = "1.0.215"
serde = "1.0.215"
vapoursynth = { version = "0.4.0", features = ["vapoursynth-api-36", "vapoursynth-functions", "vsscript-api-32", "vsscript-functions"] }

[[bin]]
name = "vspreview-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = true
