[package]
name = "vspreview-rs"
version = "1.0.0"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help", "deprecated"] }
eframe = { version = "0.33.0", features = ["persistence"] }
fast_image_resize = "5.3.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
rgb = "0.8.52"
itertools = "0.14.0"
lcms2 = "6.1.1"
num_enum = "0.7.5"
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "*", default-features = false, features = ["net"] }
parking_lot = "0.12.5"
poll-promise = "0.3.0"
rfd = "0.15.4"
serde_derive = "1.0.228"
serde = "1.0.228"
vapoursynth = { version = "0.4.0", features = ["vapoursynth-api-36", "vapoursynth-functions", "vsscript-api-32", "vsscript-functions"] }

[[bin]]
name = "vspreview-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = true
